# virtengine

./: .dockerignore  .env  .envrc  .gitconfig  .gitignore  .gitleaks.toml  .golangci.yaml  .golangci.yml  .goreleaser-docker.yaml  .goreleaser-test-bins.yaml  .goreleaser.yaml  .gosec-baseline.json  .mockery.yaml  .vulnerability-allowlist.yaml  ACCEPTABLE_USE_POLICY.md  AGENTS.md  BIOMETRIC_DATA_ADDENDUM.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSENT_FRAMEWORK.md  CONTRIBUTING.md  COOKIE_POLICY.md  DATA_INVENTORY.md  DATA_PROCESSING_AGREEMENT.md  Dockerfile  ERROR_CODE_POLICY.md  GDPR_COMPLIANCE.md  HPC_PROTO_README.md  IMPLEMENTATION_SUMMARY.md  INFRA-001-IMPLEMENTATION-SUMMARY.md  INFRA-002-IMPLEMENTATION-SUMMARY.md  INFRA-003-IMPLEMENTATION-SUMMARY.md  LEGAL_COMPLIANCE_CHECKLIST.md  LEGAL_QUICK_REFERENCE.md  LEGAL_README.md  LICENSE  Makefile  PRIVACY_POLICY.md  (+53 more)
sdk/: .env  .envrc  .release-please-manifest.json  Cargo.toml  Makefile  README.md  buf.gen.python.yaml  buf.gen.rs.yaml  buf.gen.rust-sdk.yaml  buf.gen.ts.yaml  buf.yaml  buf.yaml.bak  buf.yaml.v2  changelog.md  codecov.yaml  proto-gen-fast.ps1  proto-gen-go.sh  proto-gen-output.txt  proto-gen-provider.ps1  proto-gen.ps1  release-please-config.json  tools.go
sdk/.chglog/: config.yaml
sdk/.github/: CODEOWNERS  labeler.yaml  pull_request_template.md
sdk/.github/workflows/: breakage.yaml  labeler.yaml  lint.yaml  release-ts.yaml  release.yaml
sdk/docs/: api-proto-migration-guide.md  cli-migration.md  config.yaml  protodoc-markdown.tmpl
sdk/docs/proto/: node.md  provider.md
sdk/docs/swagger-ui/: swagger.yaml
sdk/go/: .golangci.yaml  .mockery.yaml  doc.go  go.mod  go.sum  tools.go
sdk/go/cli/: audit_query.go  audit_tx.go  auth_decode.go  auth_encode.go  auth_encode_test.go  auth_flags.go  auth_multisign.go  auth_query.go  auth_query_test.go  auth_suite_test.go  auth_tips.go  auth_tx.go  authz_query.go  authz_query_test.go  authz_suite_test.go  authz_tx.go  bank_query.go  bank_query_test.go  bank_suite_test.go  bank_tx.go  bank_tx_test.go  bech32.go  bme_query.go  bme_suite_test.go  bme_tx.go  broadcast.go  cctx.go  cert_query.go  cert_tx.go  cmt_abci.go  configs.go  context.go  (+128 more)
sdk/k8s.io/: buf.yaml
sdk/make/: code-style.mk  codegen.mk  lint.mk  mod.mk  release-ts.mk  setup-cache.mk  test.mk
sdk/portal/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
sdk/python/: README.md  pyproject.toml
sdk/rust/: Cargo.toml  README.md
sdk/script/: grpc-probe.sh  protocgen.sh  semver_funcs.sh  tools.sh
sdk/specs/: doc.go  go.mod  jwt-schema.json  specs.go
sdk/ts/: AGENTS.md  CHANGELOG.md  README.md  esbuild.config.mjs  eslint.config.mjs  jest.config.cjs  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.spec.json  tsconfig.test.tsbuildinfo  tsconfig.tsbuildinfo
(+6328 files in other folders)
