[package]
name = "virtengine-sdk"
version = "0.1.0"
edition = "2021"
authors = ["VirtEngine <sdk@virtengine.io>"]
license = "Apache-2.0"
description = "Rust SDK for VirtEngine blockchain"
repository = "https://github.com/virtengine/virtengine/tree/main/sdk/rust"
documentation = "https://docs.virtengine.io/sdk/rust"
keywords = ["blockchain", "cosmos", "sdk", "identity"]
categories = ["api-bindings", "cryptography"]

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
bip32 = "0.5"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.9"
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbjson-types = "0.6"
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
